@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html>
 	<head>
-		<title>Version 1.5.0 ChangeLog</title>
+		<title>Version 1.5.1 ChangeLog</title>
 		<style type="text/css">
 .auto-style1 {
 	text-decoration: underline;
@@ -10,7 +10,10 @@
 	</head>
 	<body>
         <p>
-            <br /><span class="auto-style1">Pulse Waves-1.5.0</span>
+            <br /><span class="auto-style1">Pulse Waves-1.5.1</span>
+            <br />  Pulse Waves-1.5.1
+            <br />   * Updated Prediction Model for Absorption, and Narrowband calculations.
+            <br />
             <br />  Pulse Waves-1.5.0
             <br />   * Fixed a bug with DecodeCSHOW for CWPRT and CBI.
             <br />   * Updated Prediction Model System Init Time.
@@ -25,6 +28,8 @@
             <br />   * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
             <br />   * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
             <br />   * Fixed bug in DecodeCSHOW with DecodeCBI() and added the interleave flag.
+            <br />   - In MathHelper, added AddColumn and AddRow for 2D arrays.
+            <br />   - Added Matlab Matrix exporter.
             <br />
             <br />   RTI-3.4.6
             <br />   * Changed DilutionOfPrecision to not throw an exception but pass NaN.
